# vim: set noexpandtab:

2012-09-18 Steve
	* Added truthMatchType flag to Lepton class
	* Added isChargeFlip flag to Electron class

2012-09-18 Matt 
	* Added NtSys_TRIGSF_UP(_DN) to SusyDefs so accomodate new trigger package 
	* Increased event ClassDef number to reflect changes above.
	* Updated DilTrigLogic:
	      * getTriggerWeight -- Use this to get overall event weight.
	      * Updated constructor which takes a string for which maps to use. Default is A-X (ie. all!)
	* DilTrigLogic now dependent on DGTriggerReweight. Added to install script	

2012-09-18 Serhan Mete <amete@cern.ch>
	* scripts/install.sh: Switch SUSYTools to 00-01-07
	* SusyNtuple/SusyDefs.h: Added SusyNtSystNames and BTagSysNames
				 Human-readable definitions for systematics 

2012-09-17 Steve
	* Update event weight functions for A-D
	* Remove wPileup1fb from Event class
	* Tagging SusyNtuple-00-00-27

2012-09-14 Matt
	* Added susyFinalState to the ntuple

2012-09-12 Matt
	* Adding variables to do pdf rewighting. Event Class incremented.
	* tagging SusyNtuple-00-00-26

2012-09-08 Steve
	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
	* Tagging SusyNtuple-00-00-25

2012-09-06 Steve
	* Added jj methods findBestW, Mjj
	* Added separate pt cut for baseline jets, modified names of the signal cut constants
	* Added some additional lepton signal cut scenarios, commented out

2012-09-03 Matt
	* Added 4 Met Sys to SusyDefs

2012-09-03 Steve
	* Update trigger thresholds to match those of the 2-lep group

2012-08-30 Matt
	* Removed previous electron scale sys and replaced with 4 new shifts.	
	* Modified Sys enums in SusyDefs

2012-08-28 Steve
	* Add matchTruth flag to jets
	* Add boolean arguments to lepton IP methods to toggle usage of unbiased variables
		* Current biased values are still the default
	* Add variables to Tau: nTrack, author, eleBDT, jetBDT
	* Tagging SusyNtuple-00-00-24

2012-08-26 Steve
	* Added event weight functions for A-B3, A-B